--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,3 @@
-tmp/sass-cache/0f0d542b3bf56e2ac61e6961b298c8651f46bc10/_dashboard.scssc
-tmp/sass-cache/0f0d542b3bf56e2ac61e6961b298c8651f46bc10/_logged_out.scssc
-tmp/sass-cache/1c261fea4b4a80a37e631699cdd9404fb4be24ec/_bourbon.scssc
-tmp/sass-cache/25853a6451490814cef8979b6323d39298d89a85/active_admin.scssc
-tmp/sass-cache/39eec88b36a1b2f334ae66e70ae00e86c4eddd1e/_base.css.scssc
-tmp/sass-cache/39eec88b36a1b2f334ae66e70ae00e86c4eddd1e/_forms.css.scssc
-tmp/sass-cache/39eec88b36a1b2f334ae66e70ae00e86c4eddd1e/_header.css.scssc
-tmp/sass-cache/39eec88b36a1b2f334ae66e70ae00e86c4eddd1e/_mixins.css.scssc
-tmp/sass-cache/39eec88b36a1b2f334ae66e70ae00e86c4eddd1e/_typography.css.scssc
-tmp/sass-cache/42c4a2086fa03e972e85cb1514da29cd5e8cfd4a/_bourbon.scssc
-tmp/sass-cache/4473ea9a9e7067e808accab3a6d4ee924f379202/_button.scssc
-tmp/sass-cache/4473ea9a9e7067e808accab3a6d4ee924f379202/_clearfix.scssc
-tmp/sass-cache/4473ea9a9e7067e808accab3a6d4ee924f379202/_font-family.scssc
-tmp/sass-cache/4473ea9a9e7067e808accab3a6d4ee924f379202/_html5-input-types.scssc
-tmp/sass-cache/4473ea9a9e7067e808accab3a6d4ee924f379202/_position.scssc
-tmp/sass-cache/4473ea9a9e7067e808accab3a6d4ee924f379202/_timing-functions.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_all.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_buttons.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_gradients.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_icons.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_reset.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_rounded.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_sections.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_shadows.css.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_typography.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_utilities.scssc
-tmp/sass-cache/8f879b10f8794b528bad48d82cbfe9195f74723f/_variables.css.scssc
-tmp/sass-cache/c57715a72bffba9e0fee3abc7fb5a039b2595bb9/_footer.scssc
-tmp/sass-cache/c57715a72bffba9e0fee3abc7fb5a039b2595bb9/_main_structure.scssc
-tmp/sass-cache/c57715a72bffba9e0fee3abc7fb5a039b2595bb9/_title_bar.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_deprecated-webkit-gradient.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_flex-grid.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_grid-width.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_linear-gradient.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_modular-scale.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_radial-gradient.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_render-gradients.scssc
-tmp/sass-cache/c59d7407840bb2cebd4944b1a5999155c4230624/_tint-shade.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_animation.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_appearance.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_background-image.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_background-size.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_border-image.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_border-radius.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_box-shadow.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_box-sizing.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_columns.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_flex-box.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_inline-block.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_linear-gradient.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_radial-gradient.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_transform.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_transition.scssc
-tmp/sass-cache/f0d683887d397b576c255e267c6e209853c23c44/_user-select.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_blank_slates.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_breadcrumbs.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_buttons.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_columns.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_comments.css.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_date_picker.css.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_flash_messages.css.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_grid.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_links.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_pagination.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_panels.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_scopes.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_status_tags.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_table_tools.css.scssc
-tmp/sass-cache/f18294410df9fa022b44b93a6c60899817b7f0eb/_tables.css.scssc
 development.log
 development.sqlite3
+.sass-cache
